# src/main/java/vn/cmax/cafe/api/models/FileUploadResponse.java
@@ -1,0 +1,81 @@
+package vn.cmax.cafe.api.models;
+
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import io.swagger.v3.oas.annotations.media.Schema;
+import java.io.Serializable;
+import org.springframework.validation.annotation.Validated;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+
+/**
+ * FileUploadResponse
+ */
+@Validated
+
+
+public class FileUploadResponse  implements Serializable  {
+  private static final long serialVersionUID = 1L;
+
+  @JsonProperty("url")
+  private String url = null;
+
+  public FileUploadResponse url(String url) {
+    this.url = url;
+    return this;
+  }
+
+  /**
+   * Get url
+   * @return url
+   **/
+  @Schema(example = "https://example.com/image.png", description = "")
+  
+    public String getUrl() {
+    return url;
+  }
+
+  public void setUrl(String url) {
+    this.url = url;
+  }
+
+
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    FileUploadResponse fileUploadResponse = (FileUploadResponse) o;
+    return Objects.equals(this.url, fileUploadResponse.url);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(url);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class FileUploadResponse {\n");
+    
+    sb.append("    url: ").append(toIndentedString(url)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
